# stress-progress

./: .clang-format  .gitignore  CMakeLists.txt  README.md  i18n.qrc  main.cpp
i18n/: ja_JP.ts
src/: applicationdomain.hpp.in  completedialog.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressdata.hpp  progressdialog.cpp  progressdialog.hpp  progresswidget.cpp  progresswidget.hpp  versiondialog.hpp
